Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40677

QSGVertexColorMaterial ignores alpha values when on top of a rectangle with a color

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.5.0
    • 5.3.0
    • Quick: SceneGraph
    • None
    • Windows
    • 0fadb710e5639dac9f17d6655eb9edeaadbcbc33

    Description

      See https://qt-project.org/forums/viewthread/32614 for an example

      I'm not the person who asked that question, but I have exactly the same problem. QSGVertexColorMaterial ignores alpha values st for vertices when the widget is on top of a rectangle with a color. If the color of the rectangle is unset, then non-255 alpha values successfully blend to the default background color (white).

      Attachments

        For Gerrit Dashboard: QTBUG-40677
        # Subject Branch Project Status CR V

        Activity

          People

            sletta Gunnar Sletta
            ooooooooo Benjamin Jefferys
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes