Doc note about premultiplied alpha

Task-number: QTBUG-40677
Change-Id: I43b8cb4f3af8c62f67353197ffadf571a675eab7
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>